# CPP_rtype_2019

./: CMakeLists.txt  README.md  build.sh  conanfile.txt
client/: CMakeLists.txt
client/game/entity/include/: entity.hpp
client/game/entity/src/: entity.cpp
client/game/entityManager/include/: entityManager.hpp
client/game/entityManager/src/: entityManager.cpp
client/game/gameGestion/include/: IGame.hpp  SFMLGame.hpp
client/game/gameGestion/src/: SFMLGame.cpp
client/game/graphics/include/: IGraphics.hpp  SFMLGraphics.hpp
client/game/graphics/src/: SFMLGraphics.cpp
client/game/network/include/: ANetwork.hpp  INetwork.hpp  SFMLNetwork.hpp
client/game/network/src/: ANetwork.cpp  SFMLNetwork.cpp
client/game/physic/include/: SFMLPhysic.hpp
client/game/physic/src/: SFMLPhysic.cpp
client/game/spec/include/: specification.hpp
client/game/spec/src/: specification.cpp
client/include/: libLoader.hpp  r-type_client.hpp
client/menu/include/: IMenu.hpp  SFMLMenu.hpp
client/menu/src/: SFMLMenu.cpp
client/src/: libLoader.cpp  main.cpp
common/: CMakeLists.txt
common/Entities/Mechant1/: CMakeLists.txt  Mechant1.cpp  Mechant1.hpp
common/Entities/Mechant2/: CMakeLists.txt  Mechant2.cpp  Mechant2.hpp
common/Entities/Mechant3/: CMakeLists.txt  Mechant3.cpp  Mechant3.hpp
common/Entities/Mechant4/: CMakeLists.txt  Mechant4.cpp  Mechant4.hpp
common/Entities/Player1/: CMakeLists.txt  Player1.cpp  Player1.hpp
common/Entities/Player2/: CMakeLists.txt  Player2.cpp  Player2.hpp
common/Entities/Player3/: CMakeLists.txt  Player3.cpp  Player3.hpp
common/Entities/Player4/: CMakeLists.txt  Player4.cpp  Player4.hpp
common/Entities/Shoot1/: CMakeLists.txt  Shoot1.cpp  Shoot1.hpp
common/Entities/Shoot2/: CMakeLists.txt  Shoot2.cpp  Shoot2.hpp
common/Entities/Shoot3/: CMakeLists.txt  Shoot3.cpp  Shoot3.hpp
common/Entities/Shoot4/: CMakeLists.txt  Shoot4.cpp  Shoot4.hpp
common/Entities/Shoot5/: CMakeLists.txt  Shoot5.cpp  Shoot5.hpp
common/include/: AEntity.hpp  EntityLoader.hpp  IEntity.hpp  Packet.hpp
common/src/: AEntity.cpp  EntityLoader.cpp
doc/: RFC R-TYPE 2019  RFC.txt
server/: CMakeLists.txt
server/include/: INetwork.hpp  IUDPServer.hpp  Network.hpp  ParseRequest.hpp  Player.hpp  Server.hpp  UDPGame.hpp  UDPServer.hpp
server/src/: Network.cpp  ParseRequest.cpp  Player.cpp  Server.cpp  UDPGame.cpp  UDPServer.cpp  main.cpp
